wacc/test/golden/semanticErr.while.truErr
# true typo

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  while tru do
    skip
  done
end


Semantic error in test/wacc_examples/invalid/semanticErr/while/truErr.wacc (line 12, column 9):
tru was not declared.
> begin
>   while tru do
>         ^^^
>     skip

